--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn font awesome</title>
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <h1>This is Jaber!</h1>
+    <br>
+    <p>Mobile <i class="fas fa-mobile-alt"></i>
+    </p>
+    <p>
+        Computer  <i style="font-size:100px; color:red ;" class="fas fa-tv"></i>
+    </p>
 </body>
 </html>
